debug/grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: prometheus
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:12.2.1
          ports:
            - containerPort: 3000
        - name: grafana-sc-dashboard
          image: quay.io/kiwigrid/k8s-sidecar:1.30.10
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
        - name: grafana-sc-datasources
          image: quay.io/kiwigrid/k8s-sidecar:1.30.10
          volumeMounts:
            - name: sc-datasources-volume
              mountPath: /etc/grafana/provisioning/datasources
      volumes:
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: sc-datasources-volume
          emptyDir: {}
